# OcctNet

./: .gitignore  LICENSE  OcctNet.sln  README.md
.github/workflows/: nuget.yml
OcctNet/: App.axaml  App.axaml.cs  OcctNet.csproj  Program.cs  ViewLocator.cs  app.manifest
OcctNet.Wrapper/: OcctAxis1d.cs  OcctBoundingBox.cs  OcctBox.cs  OcctCylinder.cs  OcctEdge.cs  OcctException.cs  OcctFace.cs  OcctMesh.cs  OcctMeshVertex.cs  OcctNet.Wrapper.csproj  OcctPoint3d.cs  OcctPointCoordinates.cs  OcctRuntime.cs  OcctShape.cs  OcctSphere.cs  OcctVector3d.cs  OcctWire.cs  README.md
OcctNet.Wrapper/Native/: NativeMethods.cs  OcctMeshHandle.cs  OcctPointHandle.cs  OcctShapeHandle.cs  OcctStatus.cs
OcctNet/Controls/: SketchViewport.cs
OcctNet/Models/: SketchDocument.cs  SketchEdge.cs  SketchFace.cs  SketchPoint.cs  SketchTool.cs
OcctNet/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
OcctNet/Views/: MainWindow.axaml  MainWindow.axaml.cs
docs/: API-Migration.zh-CN.md  AvaloniaRendering.zh-CN.md  Examples.zh-CN.md  GettingStarted.zh-CN.md  NativeBridge.zh-CN.md
native/: CMakeLists.txt
native/include/: OcctNetNative.h
native/src/: OcctNetNative.cpp
vcpkg-triplets/: arm64-osx-dynamic.cmake
